--- a/ENSEMBLE_WITH_PIPELINE(BREAST_CANCER).ipynb
+++ b/ENSEMBLE_WITH_PIPELINE(BREAST_CANCER).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUeeHY9704u079EyriA5kn",
+      "authorship_tag": "ABX9TyMSEq7WoKJljKRvF65WrQe5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,6 +154,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "*This section imports the necessary libraries and modules required for data manipulation, model evaluation, and handling class imbalance.*"
+      ],
+      "metadata": {
+        "id": "vQBZCZbabX-o"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Loading some example data\n",
@@ -164,7 +173,27 @@
         "from sklearn.model_selection import cross_validate\n",
         "from sklearn.model_selection import RepeatedStratifiedKFold\n",
         "from imblearn.combine import SMOTETomek\n",
-        "from imblearn.under_sampling import TomekLinks\n",
+        "from imblearn.under_sampling import TomekLinks"
+      ],
+      "metadata": {
+        "id": "aJ0sEE90bW63"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*In this part, the code reads the breast cancer dataset from a CSV file, checks for missing values, and drops unnecessary columns. It then separates the features (X) and labels (y) from the dataset. Finally, it splits the data into training and testing sets using train_test_split from sklearn.model_selection.*"
+      ],
+      "metadata": {
+        "id": "A42ADODHbnwg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "data = pd.read_csv('/content/breast_cancer_WBCD.csv')\n",
         "# Handle missing values\n",
         "data.isnull().sum()\n",
@@ -173,9 +202,7 @@
         "X = data.drop(\"diagnosis\", axis=1)\n",
         "y = data.diagnosis\n",
         "# Split test and train data\n",
-        "X_train,X_test,y_train,y_test= train_test_split(X,y,test_size=0.2)\n",
-        "cv_ori=RepeatedStratifiedKFold(n_splits=10, n_repeats=3)\n",
-        "cv_ori.split"
+        "X_train,X_test,y_train,y_test= train_test_split(X,y,test_size=0.2)"
       ],
       "metadata": {
         "id": "lGgczpsl1dQE",
@@ -258,6 +285,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "*This code creates an instance of RepeatedStratifiedKFold for cross-validation. It will split the data into 10 folds and repeat the process 3 times, ensuring that the class distribution is preserved in each fold.*"
+      ],
+      "metadata": {
+        "id": "Cua5V6tkblsa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cv_ori=RepeatedStratifiedKFold(n_splits=10, n_repeats=3)\n",
+        "cv_ori.split"
+      ],
+      "metadata": {
+        "id": "MpIOxgzzbg3C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
@@ -311,6 +359,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "*This section trains a Logistic Regression model on the training data, makes predictions on the test data, and calculates the accuracy, precision, and recall scores for the model.\n",
+        "\n",
+        "The rest of the code follows a similar pattern, where it trains and evaluates several other models, such as K-Nearest Neighbors (KNN), Support Vector Machines (SVM), Voting Ensemble, Gradient Boosting, AdaBoost, and Perceptron Neural Network.*"
+      ],
+      "metadata": {
+        "id": "acj0bmUKbzJ9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**LOGISTIC REGRESSION**"
       ],
       "metadata": {
@@ -332,8 +391,26 @@
         "import numpy as np\n",
         "##feature Scaling\n",
         "from sklearn.decomposition import PCA\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "\n",
+        "from sklearn.preprocessing import StandardScaler"
+      ],
+      "metadata": {
+        "id": "YlPXvJlzb8v2"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*This part imports additional libraries and modules required for feature scaling, dimensionality reduction (PCA), and ensemble methods.*"
+      ],
+      "metadata": {
+        "id": "n9LIHcpucFiE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "steps=[ ('scaler',StandardScaler()),\n",
         "        (\"PCA\",PCA(n_components=20)),\n",
         "        (\"clf1\", LogisticRegression())\n",
@@ -341,25 +418,55 @@
         "\n",
         "# print(steps)\n",
         "pipe=Pipeline(steps)\n",
-        "pipe\n",
+        "pipe"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        },
+        "id": "LCoouy11cCSb",
+        "outputId": "48bd74ab-8b09-4d93-fe33-8226ca1391c2"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pipeline(steps=[('scaler', StandardScaler()), ('PCA', PCA(n_components=20)),\n",
+              "                ('clf1', LogisticRegression())])"
+            ],
+            "text/html": [
+              "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()), (&#x27;PCA&#x27;, PCA(n_components=20)),\n",
+              "                (&#x27;clf1&#x27;, LogisticRegression())])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()), (&#x27;PCA&#x27;, PCA(n_components=20)),\n",
+              "                (&#x27;clf1&#x27;, LogisticRegression())])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">StandardScaler</label><div class=\"sk-toggleable__content\"><pre>StandardScaler()</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">PCA</label><div class=\"sk-toggleable__content\"><pre>PCA(n_components=20)</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div></div></div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*This code creates a Pipeline object that chains together the steps of feature scaling (using StandardScaler), dimensionality reduction (using PCA with 20 principal components), and the Logistic Regression model.*"
+      ],
+      "metadata": {
+        "id": "RYgzthZicPXY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Evaluate model\n",
         "scoring=['accuracy','precision_macro','recall_macro']\n",
         "scores_ori = cross_validate(pipe, X, y, scoring=scoring, cv=cv_ori, n_jobs=-1)\n",
         "# summarize performance\n",
         "print('Mean Accuracy: %.4f' % np.mean(scores_ori['test_accuracy']))\n",
         "print('Mean Precision: %.4f' % np.mean(scores_ori['test_precision_macro']))\n",
-        "print('Mean Recall: %.4f' % np.mean(scores_ori['test_recall_macro']))\n",
-        "# print(pipe.fit(X_train_smote,y_train_smote))\n",
-        "# y_pred = pipe.predict_proba(X_test)\n",
-        "# accuracy = accuracy_score(y_test,y_pred)\n",
-        "# print(f'Accuracy : {accuracy}')\n",
-        "\n",
-        "# kfold=KFold(10)\n",
-        "# results=cross_val_score(pipe,X,y,cv=kfold)\n",
-        "# print(results)\n",
-        "# print(f'Max :{np.max(results)}')\n",
-        "# print(f'Min :{np.min(results)}')\n",
-        "# print(np.mean(results))"
+        "print('Mean Recall: %.4f' % np.mean(scores_ori['test_recall_macro']))\n"
       ],
       "metadata": {
         "colab": {
@@ -380,6 +487,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*This section evaluates the performance of the Pipeline object using cross_validate from sklearn.model_selection. It prints the mean accuracy, precision, and recall scores obtained from the repeated stratified cross-validation.\n",
+        "\n",
+        "The code continues to create and evaluate similar Pipeline objects for other models, such as KNN, SVM, Voting Ensemble, Gradient Boosting, AdaBoost, and Perceptron Neural Network.*"
+      ],
+      "metadata": {
+        "id": "tWSTtCnucYbr"
+      }
     },
     {
       "cell_type": "code",
@@ -951,13 +1069,14 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "*In this final section, the code creates a list mypipes containing all the Pipeline objects for the different models. It then iterates over this list and performs repeated stratified cross-validation on each model using cross_validate. It prints the name of the model and the mean accuracy, precision, and recall scores for each model.*\n",
+        "**Overall, this code explores several machine learning models for the breast cancer classification problem. It uses techniques like feature scaling, dimensionality reduction (PCA), and ensemble methods (Voting Ensemble, Gradient Boosting, AdaBoost) to improve the performance of the models. The code evaluates the models using repeated stratified cross-validation, which provides a more robust estimate of the model's performance by considering multiple splits of the data and preserving the class distribution in each fold.**"
+      ],
       "metadata": {
-        "id": "mFO4YMrykE4d"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "UpJHZXWEcjIM"
+      }
     }
   ]
 }
